--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,21 +18,37 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.18
-
-    - name: Install Helm
-      uses: azure/setup-helm@v1
-      with:
-        version: v3.8.1
+        go-version: 1.19
 
     - name: Build
-      working-directory: src
       run: go build -v ./...
 
     - name: Test
-      working-directory: src
-      run: go test -v ./...
-    
-    - name: Helm Chart Lint
       run: |
-        helm lint ./charts
+        go install github.com/axw/gocov/gocov@latest
+        go install github.com/AlekSi/gocov-xml@latest
+        go install github.com/matm/gocov-html/cmd/gocov-html@latest
+
+        go test -coverprofile coverage.txt -covermode count -v ./...
+        gocov convert coverage.txt | gocov-xml > cobertura-coverage.xml
+
+    - name: Code Coverage Summary Report
+      if: ${{ false }}
+      uses: irongut/CodeCoverageSummary@v1.3.0
+      with:
+        filename: cobertura-coverage.xml
+        badge: true
+        fail_below_min: false
+        format: markdown
+        hide_branch_rate: false
+        hide_complexity: false
+        indicators: true
+        output: both
+        thresholds: '40 80'
+        
+    - name: Add Coverage PR Comment
+      if: ${{ false }}
+      uses: marocchino/sticky-pull-request-comment@v2
+      with:
+        recreate: true
+        path: code-coverage-results.md
