--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-*.env
-bin/*
-.jekyll-cache/*
+*common-go*
 _site/*
+.jekyll-cache/*
+coverage.txt
+.local
