--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -25,12 +25,9 @@ jobs:
 
     - name: Test
       run: |
-        go install github.com/axw/gocov/gocov@latest
-        go install github.com/AlekSi/gocov-xml@latest
-        go install github.com/matm/gocov-html/cmd/gocov-html@latest
-
-        go test -coverprofile coverage.txt -covermode count -v ./...
-        gocov convert coverage.txt | gocov-xml > cobertura-coverage.xml
+        go install github.com/boumenot/gocover-cobertura@latest
+        go test -coverprofile=coverage.out -covermode=count ./...
+        gocover-cobertura < coverage.out > cobertura-coverage.xml
 
     - name: Code Coverage Summary Report
       if: ${{ false }}
