--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
       name: Create tag file
       run: |
         echo ${{ steps.tag_version.outputs.new_tag }} > tag.txt      
-    - name: Upload tag version
+    - name: Upload tag versio6
       uses: actions/upload-artifact@v1
       with:
         name: tag_version
